# kyber

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.txt  Cargo.toml  LICENSE-MIT  SECURITY.md  build.rs  contributing.md  readme.md  release.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: apple.yml  bench.yml  ci.yml  cross.yml  fmt.yml  kat.yml  linux.yml  no_std.yml  release.yml  tests.yml  windows.yml
benches/: api.rs  readme.md
examples/: ake.rs  kem.rs  keygen.rs  uake.rs
examples/encrypt_message/: main.rs
examples/kyberx25519_hybrid_message_encrypt/: main.rs
pkg/: package.json  pqc_kyber.d.ts  pqc_kyber.js  pqc_kyber_bg.js  pqc_kyber_bg.wasm  pqc_kyber_bg.wasm.d.ts  readme.md
src/: aes256.rs  api.rs  cbd.rs  error.rs  fips202.rs  indcpa.rs  kem.rs  kex.rs  lib.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  rng.rs  sha.rs  symmetric.rs  utils.rs  verify.rs  wasm.rs
src/avx2/: _basemul.S  _fq.S  _invntt.S  _ntt.S  _shuffle.S  aes256ctr.rs  align.rs  basemul.S  cbd.rs  consts.h  consts.rs  fips202.rs  fips202x4.rs  fq.S  indcpa.rs  invntt.S  keccak4x.rs  mod.rs  ntt.S  poly.rs  polyvec.rs  rejsample.rs  shuffle.S  verify.rs
src/avx2/nasm/: basemul.asm  consts.inc  fq.asm  fq.inc  invntt.asm  ntt.asm  shuffle.asm  shuffle.inc
src/neon/: cbd.c  fips202x2.c  neon_ntt.c  neon_poly.c  neon_polyvec.c  neon_symmetric-shake.c
src/reference/: aes256ctr.rs  cbd.rs  fips202.rs  indcpa.rs  mod.rs  ntt.rs  poly.rs  polyvec.rs  reduce.rs  verify.rs
tests/: crypto_kem_keypair_randombytes_2400  encode_buffers_2400  indcpa_keypair_buffers_2400  kat.rs  kem.rs  kex.rs  readme.md  run_all_tests.sh
tests/KAT/: build_kats.sh  readme.md
tests/KATs/: build_kats.sh  readme.md
tests/load/: mod.rs
tests/rand_bufs/: readme.md
tests/utils/: mod.rs
www/: README.md  index.html  index.js  package.json  readme.md  style.css
